if you want two push two elements away from each other you first creat a parent container for the elements after that you creat a container for each of the elements and then you use the space-between command in the parent container this will make the elements go on different sides of the parent container the top element moves to the left and the bottome to the right PS: its good to do this even if your not seperating elements

--- a/first project.css/Plain Text.css
+++ b/first project.css/Plain Text.css
@@ -2,3 +2,12 @@ body {
     background-color: black;
     color: aliceblue;
   }
+  header{
+    display: flex;
+    justify-content: space-between; 
+    align-items: center;
+    padding: .5rem 1rem;
+  }
+header .menu a{
+    margin-left: .75rem;
+}
