--- a/first project.css/Plain Text.css
+++ b/first project.css/Plain Text.css
@@ -11,3 +11,12 @@ body {
 header .menu a{
     margin-left: .75rem;
 }
+.container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.up{
+    background-color:darkblue;
+
+}
